--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,14 @@
-/Capture.PNG
 /Video/No_QR_Test.mp4
 /Video/OutTest.mp4
 /Video/PRutkowski (HH-SRVHOME1UserHomes$) (Z) - Shortcut.lnk
 /Video/TestVideo.mp4
 /Video/TestVideoNew.mp4
 /Video/TestVideoNewAuto.mp4
-/Reports/Data/Scan Results/
 Images/
 Reports/Data/Scan Results/
 Video/
 __pycache__/
 /obspython.py
-/Reports/Data/Metric Reports/
-/Reports/Data/Visual Graphs/
+/Reports/
 /NumbaTest.py
 /venv/
