Update gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,9 @@ __pycache__/
 /Reports/
 /Python/NumbaTest.py
 /venv/
+/.idea/.name
+/Rendered_Videos/Original.mp4
+/Rendered_Videos/qr_test_vid_5000_frames_60fps_Fractured1080p60.0FPS5000Frames.mp4
+/Rendered_Videos/Rendered.mp4
+/Rendered_Videos/test_qr_clip.mp4
+/Rendered_Videos/test_qr_clip1.mp4
