--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ __pycache__/
 /Rendered_Videos/Rendered.mp4
 /Rendered_Videos/test_qr_clip.mp4
 /Rendered_Videos/test_qr_clip1.mp4
+/RenderBatch.py
